--- a/temples.css
+++ b/temples.css
@@ -80,7 +80,7 @@ footer {
     nav ul {
         display: none;
         flex-direction: column;
-        background: #e5e5e5;
+        background: #4c0863;
         position: absolute;
         top: 50px;
         left: 0;
